2007-02-08 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 378: removed two extra handshakes in format7 functions.
	
2007-02-07 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 377: comment spurious debug message
	* SVN 376: Allow changing format7 properties while capture is
	           running IF the current video mode is different from
		   the video mode to be modified.
	* SVN 375: fix typo in Makefile.am
        * SVN 374: RAW16 formats are considered grayscale in conversion
	           functions.

2007-02-02 David Moore http://davemoore.org/
	* SVN 373: Fix another typo in trigger mode detection.
	* SVN 372: Avoid possible buffer overflow in topology code.
	* SVN 371: Fix typo in trigger mode detection.

2007-02-01 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 370: Allow to change the pinstate of AVT IO pins.
	           Thanks to Chris French.
	* SVN 369: Update examples to stop transmission before we stop
	           capture.
	* SVN 368: Do not fail to detect a camera if it does not have the
	           optional functions register. Thanks to Fabien Spindler.
	* SVN 367: set a default video mode if none is set at boot time.
	           Thanks to Matthias Hanel.
	* SVN 366: bayer downsampling function now take the INPUT image
	           size as argument. It used to take the OUTPUT image size
		   as argument but this is counter intuitive. 
	           Thanks to Matthias Barkhoff.
	* SVN 365: allow debayering of MONO8 and MONO16 formats.
	           Thanks to Matthias Barkhoff.

2007-01-30 David Moore http://davemoore.org/
	* SVN 364: pkgincludedir fix below still wasn't quite right

2007-01-29 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 363: fix the definition pkgincludedir in configure.in
	           Thanks to Frederic Devernay.

2007-01-27 David Moore http://davemoore.org/
	* SVN 362: Apply patch from Matt Robinson for the Mac OS capture
	           routine to wait for thread creation with a semaphore.
